Atualizando as cores

--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
 <body>
     <main>
         <section class="robot">
-            <img class="robo" src="img/robotron.png" alt="robo" id="robot">
+            <section class="botoes">
+            <button class="alterar" data-alterar onclick="trocaImagem('Vermelho')">vermelho</button>
+            <button class="alterar" data-alterar onclick="trocaImagem('Rosa')">Rosa</button>
+            <button class="alterar" data-alterar onclick="trocaImagem('Preto')">Preto</button>
+            <button class="alterar" data-alterar onclick="trocaImagem('Branco')">Branco</button>
+            <button class="alterar" data-alterar onclick="trocaImagem('Azul')">Azul</button>
+            <button class="alterar" data-alterar onclick="trocaImagem('Amarelo')">Amarelo</button>
+            </section>
+            <img class="robo" src="img/Robotron 2000 - Branco.png" alt="robo" >
             <figcaption class="titulo">ROBOT <br>FURIOUS</figcaption>
         </section>
 
@@ -100,8 +108,6 @@
     </main>
 
 
-
-    
     <script src="js/main.js"></script>
 </body>
 </html>
